// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`networks renders empty positions card when on supported chain with no positions 1`] = `
<DocumentFragment>
  <div
    class="Column__AutoColumn-sc-1r2yyln-2 Pool__PageWrapper-sc-um62p3-0 fYeWeg eKrzNy"
  >
    <div
      class="NavigationTabs__Tabs-sc-17q0q28-0 kdXLVp"
      style="margin-bottom: 20px; display: none; padding: 1rem 1rem 0px 1rem;"
    >
      <a
        class="NavigationTabs__StyledNavLink-sc-17q0q28-1 fmMEMN"
        href="/swap"
        id="swap-nav-link"
      >
        Swap
      </a>
      <a
        aria-current="page"
        class="NavigationTabs__StyledNavLink-sc-17q0q28-1 fmMEMN ACTIVE"
        href="/pool"
        id="pool-nav-link"
      >
        Pool
      </a>
    </div>
    <div
      class="Column__AutoColumn-sc-1r2yyln-2 bPeoqt"
    >
      <div
        class="Column__AutoColumn-sc-1r2yyln-2 ksWoxm"
        style="width: 100%;"
      >
        <div
          class="sc-bdnxRM Row-sc-u7azg8-0 Row__RowBetween-sc-u7azg8-1 Pool__TitleRow-sc-um62p3-1 dHNyFh xDbmg hzJkYd hCbTuX"
          style="margin-top: 1rem;"
        >
          <div
            class="theme__TextWrapper-sc-5lu8um-0 etkwRL css-1xd3sow"
          >
            Pools Overview
          </div>
          <div
            class="sc-bdnxRM Row-sc-u7azg8-0 Row__RowFixed-sc-u7azg8-4 Pool__ButtonRow-sc-um62p3-2 lmTMKd hLLNig kraLww cObwhm"
          >
            <div
              class="Menu__StyledMenu-sc-1s7r6xc-3 kAixpC Pool__Menu-sc-um62p3-3 hWucEK"
            >
              <button
                class="sc-bdnxRM hSDgzJ Button__BaseButton-sc-tdn257-0 Button__ButtonGray-sc-tdn257-3 Pool__MoreOptionsButton-sc-um62p3-5 bVCaPv bFJueL eTKJIV"
              >
                <div
                  class="theme__TextWrapper-sc-5lu8um-0 etkwRL Pool__MoreOptionsText-sc-um62p3-6 dqQZwl css-1frkxb8"
                >
                  More
                  <svg
                    fill="none"
                    height="15"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="15"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <polyline
                      points="6 9 12 15 18 9"
                    />
                  </svg>
                </div>
              </button>
            </div>
            <a
              class="Button__BaseButton-sc-tdn257-0 Button__ButtonPrimary-sc-tdn257-1 Pool__ResponsiveButtonPrimary-sc-um62p3-10 bVCaPv jpiSkz gVNiJq"
              href="/add/ETH"
              id="join-pool-button"
            >
              + New Position
            </a>
          </div>
        </div>
        <main
          class="Pool__MainContentWrapper-sc-um62p3-11 fUxNHF"
        >
          <div
            class="Pool__ErrorContainer-sc-um62p3-7 frTKSy"
          >
            <div
              class="theme__TextWrapper-sc-5lu8um-0 chxxqs css-9fgfz0"
            >
              <svg
                class="Pool__InboxIcon-sc-um62p3-9 fDcSZm"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="22 12 16 12 14 15 10 15 8 12 2 12"
                />
                <path
                  d="M5.45 5.11L2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z"
                />
              </svg>
              <div>
                Your active V3 liquidity positions will appear here.
              </div>
            </div>
            <button
              class="sc-bdnxRM hSDgzJ Button__BaseButton-sc-tdn257-0 Button__ButtonPrimary-sc-tdn257-1 bVCaPv jpiSkz"
              style="margin-top: 2em; padding: 8px 16px;"
            >
              Connect a wallet
            </button>
          </div>
        </main>
        <span
          class="components__HideSmall-sc-88web0-13 dZaAKV"
        >
          <section
            class="CTACards__CTASection-sc-1lbpl6-0 cIXeJs"
          >
            <a
              class="components__StyledLink-sc-88web0-5 kYFdcM CTACards__CTA1-sc-1lbpl6-1 eofYCX"
              href="https://help.uniswap.org/en/articles/5391541-providing-liquidity-on-uniswap-v3"
              rel="noopener noreferrer"
              target="_blank"
            >
              <div
                class="Column__AutoColumn-sc-1r2yyln-2 CTACards__ResponsiveColumn-sc-1lbpl6-4 fYeWeg gjzWtJ"
              >
                <div
                  class="theme__TextWrapper-sc-5lu8um-0 etkwRL CTACards__HeaderText-sc-1lbpl6-3 kWiYgr css-kh5b9v"
                >
                  Learn about providing liquidity ↗
                </div>
                <div
                  class="theme__TextWrapper-sc-5lu8um-0 etkwRL css-1frkxb8"
                  style="align-items: center; display: flex;"
                >
                  Check out our v3 LP walkthrough and migration guides.
                </div>
              </div>
            </a>
            <a
              class="components__StyledLink-sc-88web0-5 kYFdcM CTACards__CTA2-sc-1lbpl6-2 fbVxQY"
              href="https://info.uniswap.org/#/pools"
              rel="noopener noreferrer"
              target="_blank"
            >
              <div
                class="Column__AutoColumn-sc-1r2yyln-2 CTACards__ResponsiveColumn-sc-1lbpl6-4 fYeWeg gjzWtJ"
              >
                <div
                  class="theme__TextWrapper-sc-5lu8um-0 etkwRL CTACards__HeaderText-sc-1lbpl6-3 kWiYgr css-kh5b9v"
                  style="align-self: flex-start;"
                >
                  Top pools ↗
                </div>
                <div
                  class="theme__TextWrapper-sc-5lu8um-0 etkwRL css-1frkxb8"
                  style="align-self: flex-start;"
                >
                  Explore Uniswap Analytics.
                </div>
              </div>
            </a>
          </section>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`networks renders error card when unsupported chain is selected 1`] = `
<DocumentFragment>
  <div
    class="Column__AutoColumn-sc-1r2yyln-2 Pool__PageWrapper-sc-um62p3-0 fYeWeg eKrzNy"
  >
    <div
      class="NavigationTabs__Tabs-sc-17q0q28-0 kdXLVp"
      style="margin-bottom: 20px; display: none; padding: 1rem 1rem 0px 1rem;"
    >
      <a
        class="NavigationTabs__StyledNavLink-sc-17q0q28-1 fmMEMN"
        href="/swap"
        id="swap-nav-link"
      >
        Swap
      </a>
      <a
        aria-current="page"
        class="NavigationTabs__StyledNavLink-sc-17q0q28-1 fmMEMN ACTIVE"
        href="/pool"
        id="pool-nav-link"
      >
        Pool
      </a>
    </div>
    <div
      class="Column__AutoColumn-sc-1r2yyln-2 bPeoqt"
    >
      <div
        class="Column__AutoColumn-sc-1r2yyln-2 ksWoxm"
        style="width: 100%;"
      >
        <div
          class="sc-bdnxRM Row-sc-u7azg8-0 Row__RowBetween-sc-u7azg8-1 Pool__TitleRow-sc-um62p3-1 dHNyFh xDbmg hzJkYd hCbTuX"
          style="margin-top: 1rem;"
        >
          <div
            class="theme__TextWrapper-sc-5lu8um-0 etkwRL css-1xd3sow"
          >
            Pools Overview
          </div>
        </div>
        <main
          class="Pool__MainContentWrapper-sc-um62p3-11 fUxNHF"
        >
          <div
            class="Pool__ErrorContainer-sc-um62p3-7 frTKSy"
          >
            <div
              class="theme__TextWrapper-sc-5lu8um-0 chxxqs css-9fgfz0"
            >
              <svg
                class="Pool__NetworkIcon-sc-um62p3-8 kvLezX"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="22 12 18 12 15 21 9 3 6 12 2 12"
                />
              </svg>
              <div>
                Your connected network is unsupported. Request support 
                <a
                  class="components__StyledLink-sc-88web0-5 kYFdcM"
                  href="https://uniswap.canny.io/feature-requests"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  here
                </a>
                .
              </div>
            </div>
          </div>
        </main>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
